--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,7 @@
 .layout-route {
   display: grid;
   grid-template-columns: 8% 92%;
+    background-image: url('../public/assets/background-card.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
