--- a/src/components/authentication/Login.css
+++ b/src/components/authentication/Login.css
@@ -1,7 +1,6 @@
 .login-div {
     width: 100%;
     height: 100vh;
-    background: #353333;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,13 +9,14 @@
 .login-form {
     display: flex;
     flex-direction: column;
-    padding: 60px;
+    padding: 60px 0px;
     width: 40%;
     gap: 30px;
     border: 2px solid dimgray;
     box-shadow: 0 0 10px black;
     border-radius: 10px;
     align-items: center;
+    background-color: #353333eb;
 }
 
 .login-input {
