--- a/src/components/gamescreen/Gamescreen.css
+++ b/src/components/gamescreen/Gamescreen.css
@@ -5,13 +5,53 @@
     align-items: center;
     justify-content: center;
     background: #353333;
+    background-image: url('../../../public/assets/table-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
-.poker-table {
-    background-image: url('../../../public/assets/table.jpg');
-    width: 60%;
-    height: 400px;
-    border-radius: 250px;
-    background-size: 100% 100%;
-    border: 30px solid #640a0a;
+.seat {
+    /* box-shadow: 0 0 10px white; */
+    width: 250px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.seat-1 {
+    position: absolute;
+    top: 20%;
+    left: 24%;
+}
+
+.seat-2 {
+    position: absolute;
+    top: 45%;
+    left: 15%;
+}
+
+.seat-3 {
+    position: absolute;
+    top: 70%;
+    left: 26%;
+}
+
+.seat-4 {
+    position: absolute;
+    top: 20%;
+    right: 20%;
+}
+
+.seat-5 {
+    position: absolute;
+    top: 45%;
+    right: 11%;
+}
+
+.seat-6 {
+    position: absolute;
+    top: 70%;
+    right: 22%;
 }
