--- a/src/components/authentication/Login.css
+++ b/src/components/authentication/Login.css
@@ -16,7 +16,8 @@
     box-shadow: 0 0 10px black;
     border-radius: 10px;
     align-items: center;
-    background-color: #353333eb;
+    background-color: #35333380;
+    position: relative;
 }
 
 .login-input {
@@ -25,6 +26,7 @@
     border-radius: 5px;
     border: none;
     width: 50%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .login-input:focus {
@@ -53,4 +55,11 @@
     color: white;
     border: none;
     border-radius: 5px;
+}
+
+.error {
+    position: absolute;
+    left: 22%;
+    color: red;
+    font-style: italic;
 }
