--- a/src/components/gamescreen/Gamescreen.css
+++ b/src/components/gamescreen/Gamescreen.css
@@ -1,3 +1,5 @@
+ @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 .game-screen-div {
     width: 100%;
     height: 100vh;
@@ -18,40 +20,263 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* flex-direction: column; */
 }
 
-.seat-1 {
+.seat-6 {
     position: absolute;
     top: 20%;
     left: 24%;
 }
 
-.seat-2 {
+.seat-5 {
     position: absolute;
     top: 45%;
     left: 15%;
 }
 
-.seat-3 {
+.seat-4 {
     position: absolute;
-    top: 70%;
+    top: 72%;
     left: 26%;
 }
 
-.seat-4 {
+.seat-3 {
     position: absolute;
-    top: 20%;
-    right: 20%;
+    top: 72%;
+    right: 19%;
 }
 
-.seat-5 {
+.seat-2 {
     position: absolute;
     top: 45%;
-    right: 11%;
+    right: 8%;
 }
 
-.seat-6 {
+.seat-1 {
     position: absolute;
-    top: 70%;
-    right: 22%;
+    top: 20%;
+    right: 17%;
+}
+
+.pop-div {
+    padding: 30px 60px;
+    background: #332f2f9e;
+    border-radius: 10px;
+    box-shadow: 0 0 10px black;
+    /* width: 180px;
+    height: 200px; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.pop-txt {
+    width: inherit;
+    height: 38px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 0px 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.pop-btn {
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: none;
+    background: #1f8d3f;
+    color: white;
+}
+
+.pop-txt:focus {
+    outline: none;
+}
+
+.options {
+    position: absolute;
+    top: 20px;
+    left: 10%;
+    background: #6d35b2;
+    border: 2px solid #f2eded;
+    color: #f5f1f9;
+    padding: 10px 20px;
+    font-size: 17px;
+    box-shadow: 0 0 5px white;
+}
+
+.start {
+    left: 19%;
+    background: green;
+    border: 2px solid white;
+    color: white;
+}
+
+.span {
+    top: 10px;
+    position: absolute;
+    left: 17%;
+    color: white;
+    background: limegreen;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    box-shadow: 0 0 15px black;
+    font-size: 19px;
+}
+
+.table-div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table {
+    width: 70%;
+    height: 70%;
+    border: 2px solid;
+    border-radius: 10px;
+    background: #4b4949ab;
+}
+
+.th {
+    padding: 10px;
+    color: white;
+    background: #ff0000b3;
+    font-size: 27px;
+    FONT-WEIGHT: 100;
+}
+
+.name-player {
+    padding: 20px 10px;
+    text-align: center;
+    color: white;
+    font-size: 23px;
+    border-bottom: 1px solid black;
+}
+
+.allow {
+    border: 2px solid white;
+    background: forestgreen;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    width: 70%;
+    box-shadow: 0 0 5px black;
+}
+
+.pot {
+    color: white;
+    font-size: 50px;
+    font-family: emoji;
+    text-shadow: 0 0 15px black;
+    position: absolute;
+    top: 30px;
+}
+
+.fold-call-raise {
+    font-size: 30px;
+    font-family: math;
+    padding: 5px 30px;
+    border: 2px solid white;
+    color: white;
+    background: #871616;
+    border-radius: 5px;
+    box-shadow: 0 0 10px black;
+}
+
+.fold-div {
+    position: fixed;
+    bottom: 25px;
+    display: flex;
+    gap: 30px;
+}
+
+.common {
+    position: fixed;
+    top: 40%;
+    width: 100px;
+    height: 140px;
+    margin: 10px;
+    left: 35%;
+    box-shadow: 0 0 10px black;
+}
+
+.win-lose {
+    font-size: 60px;
+    font-family: 'Satisfy', cursive;
+    color: #f5f1f9;
+    font-style: italic;
+    text-shadow: 0 0 5px white;
+}
+
+.win-lose-div {
+    width: 100%;
+    height: 100vh;
+    background: #0b0a0a85;
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-around; */
+    flex-direction: column;
+}
+
+.continue {
+    font-size: 40px;
+    color: white;
+    font-style: italic;
+    font-family: ui-rounded;
+}
+
+.dealer-coin {
+    color: white;
+    z-index: 3;
+    font-size: 30px;
+    left: 8px;
+    position: absolute;
+    bottom: 2px;
+    background: #d4170f;
+    padding: 10px;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    border: 2px dashed white;
+    box-shadow: 0 0 10px black;
+}
+
+.pop-room-div {
+    background: aliceblue;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    gap: 5px;
+}
+.pop-room-span {
+    border: 1px solid dimgray;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+.copy-btn {
+    border: none;
+    font-size: 20px;
+    background: #459e45;
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
 }
