--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap');
+
 .home-outer-div {
     width: 100%;
     height: 100vh;
@@ -23,9 +25,17 @@
     font-size: 30px;
     font-family: math;
     padding: 10px 20px;
-    border: none;
     border-radius: 5px;
     box-shadow: 0 0 10px black;
     background: #090b17ba;
     color: white;
+}
+
+.poker-text {
+    font-size: 180px;
+    text-shadow: black 0px 0px 20px;
+    font-weight: bold;
+    font-family: 'Bigelow Rules', cursive;
+    color: white;
+    letter-spacing: 22px;
 }
